# ChangeLog for media-libs/vigra
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/vigra/ChangeLog,v 1.24 2009/06/05 16:11:41 loki_val Exp $

  05 Jun 2009; Peter Alfredsen <loki_val@gentoo.org> metadata.xml:
  Retiring, bug 220219. Adding printing and openoffice herds since
  app-office/openoffice and media-gfx/lprof are the only things using this
  library.

  02 Jun 2009; Raúl Porcel <armin76@gentoo.org> vigra-1.6.0.ebuild:
  sparc stable wrt #270195

  24 May 2009; Markus Meier <maekke@gentoo.org> vigra-1.6.0.ebuild:
  amd64/x86 stable, bug #270195

  21 May 2009; Brent Baude <ranger@gentoo.org> vigra-1.6.0.ebuild:
  stable ppc, bug 270195

  19 May 2009; Brent Baude <ranger@gentoo.org> vigra-1.6.0.ebuild:
  stable ppc64, bug 270195

  17 May 2009; Peter Alfredsen <loki_val@gentoo.org> vigra-1.6.0.ebuild,
  +files/vigra-1.6.0-gcc44.patch:
  Fix tests with gcc-4.4. Tests need all use-flags enabled to succeed. Use
  EAPI=2.

  28 Sep 2008; Mike Frysinger <vapier@gentoo.org> vigra-1.6.0.ebuild:
  Add ~ppc64 love.

*vigra-1.6.0 (11 Sep 2008)

  11 Sep 2008; Peter Alfredsen <loki_val@gentoo.org> metadata.xml,
  -vigra-1.3.2.ebuild, +vigra-1.6.0.ebuild:
  Bump, bug #235421. Adding myself as maintainer, punt old ebuild.

  11 Aug 2008; Friedrich Oslage <bluebird@gentoo.org> vigra-1.5.0-r1.ebuild:
  Add ~sparc keyword, required for openoffice

  28 Apr 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  vigra-1.5.0-r1.ebuild:
  ppc stable

  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fix up metadata.xml. If there's no maintainer for the package, the metadata
  also needs to contain m-needed@g.o.

  20 Apr 2008; Markus Meier <maekke@gentoo.org> vigra-1.5.0-r1.ebuild:
  amd64/x86 stable, security bug #218080

  18 Apr 2007; Christian Faulhammer <opfer@gentoo.org> vigra-1.3.2.ebuild:
  stable amd64, bug 173182

  18 Apr 2007; Christian Faulhammer <opfer@gentoo.org> vigra-1.3.2.ebuild,