@@ -2,6 +2,6 @@ AUX vigra-1.6.0-gcc44.patch 635 RMD160 2d787b30517e501f9eb97f9c83e5b8697f6598c2 
 DIST vigra1.5.0.tar.gz 12854465 RMD160 8d8cadc7f20586ec3336d0f6581ddfafc93fff73 SHA1 26fca97f1b3b97d9f4d3b4e775c841894e492143 SHA256 2ac6416bc1da1be8e6c308985566be93d3e210582c2a83a8e2e55077c457d6b6
 DIST vigra1.6.0.tar.gz 16525605 RMD160 cc9f6626801182a0ee71ec9eb8fa34c38f8777a7 SHA1 9714a0c4efb77726a1140329e98e5db057f9a69f SHA256 1f188ac03a8aa4663223eca8c82f91a55293d066d67127082e29a7dba1a98c9f
 EBUILD vigra-1.5.0-r1.ebuild 1250 RMD160 6201082af8f811c63ee7923fff65ebc16dc57025 SHA1 878ecc8f7fc7397c6b5ab896892fb2f346f54291 SHA256 0670738a9e3e9a1582e3279df611d3823dcd4b0bbc58375a4e0b533a4b6eb6c0
-EBUILD vigra-1.6.0.ebuild 1743 RMD160 b5bc9375a9550c58f5958304d5a2b9cb24d4096a SHA1 4b9684e2a92d1c5146501e48b0b2e83dca289f9f SHA256 166d3562e488d5c9db7cad2e90693cb4cea75070be4ee543c87d93179dec69c3
-MISC ChangeLog 3153 RMD160 29c60ac8b8cac05b15cd40aa40d9e5ddec7598e5 SHA1 46a71af28aafb49c3166f38b922ee4affeaf883f SHA256 631844ff4b2fad75592ff5fd9c105dee136f9e90e8d68f7762dac4c118e9045f
+EBUILD vigra-1.6.0.ebuild 1850 RMD160 591224a71ca2f978afc1e8e95b08ba1a9160de75 SHA1 aff461d46c1eb044afc3272453b68886231bb0eb SHA256 653b0375e5c872f2a9a6e9f5a92b71ef36a9019f2b3a403031ace2e558349a10
+MISC ChangeLog 3259 RMD160 a193d71bb579ff08171e422193b4fab07b7f12bc SHA1 fe11e049af075ffb08836c9c3ca158fb058a13fe SHA256 f5d64b3583705d343952a6fde02a2550f616cb9327931986bd2fb26ca11aba22
 MISC metadata.xml 187 RMD160 9c8b8edd91cb93979173540d1df3d264539f1f94 SHA1 c1f16177a9daf628b0fe0dcc6f8e694111d2a578 SHA256 6f9a63412850ecb6e6c0d6989f6ebe6dffe84bbb1bf3038cf8a0491b7c819161
