@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/vigra
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/vigra/ChangeLog,v 1.24 2009/06/05 16:11:41 loki_val Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/vigra/ChangeLog,v 1.25 2010/03/09 13:01:41 ssuominen Exp $
+
+  09 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> vigra-1.6.0.ebuild:
+  Fix building with libpng14.
 
   05 Jun 2009; Peter Alfredsen <loki_val@gentoo.org> metadata.xml:
   Retiring, bug 220219. Adding printing and openoffice herds since
